force-app/main/default/objects/Estimated_Procedures__c/Estimated_Procedures__c.object-meta.xml
<CustomObject>
    <description>This Object is used to track the estimated per procedure via Cost of Calculator.</description>
    <label>Estimated Procedures</label>
    <nameField>
        <displayFormat>EP-{0000}</displayFormat>
        <label>File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimated Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>