force-app/main/default/objects/Estimated_Procedures__c/fields/Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Description__c</fullName>
    <description>Used to store the code description of procedure</description>
    <label>Code Description</label>
    <type>TextArea</type>
</CustomField>