force-app/main/default/objects/Estimated_Procedures__c/fields/Contracted_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Rate__c</fullName>
    <label>Contracted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>