force-app/main/default/objects/Estimated_Procedures__c/fields/Estimates__c.field-meta.xml
<CustomField>
    <fullName>Estimates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimates</label>
    <referenceTo>Estimates__c</referenceTo>
    <relationshipLabel>Estimated Procedures</relationshipLabel>
    <relationshipName>Estimated_Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>