force-app/main/default/objects/Estimated_Procedures__c/fields/ICT_CODE__c.field-meta.xml
<CustomField>
    <fullName>ICT_CODE__c</fullName>
    <label>ICT - CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>