force-app/main/default/objects/Estimated_Procedures__c/fields/Total_Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracted_Price__c</fullName>
    <label>Total Contracted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>